--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         class="hidden glass sticky top-0 z-40 border-b border-white/20 px-6 py-4 flex justify-between items-center h-[72px]">
         <div class="flex items-center gap-2">
             <div class="bg-blue-600 p-1.5 rounded-lg text-white text-xs"><i class="fas fa-map-marked-alt"></i></div>
-            <span class="font-bold text-xl tracking-tighter">GeoSurvey</span>
+            <span class="font-bold text-xl tracking-tighter">GeoSurveySBR</span>
         </div>
         <button onclick="confirmLogout()"
             class="w-10 h-10 rounded-full bg-red-50 text-red-500 flex items-center justify-center"><i
