--- a/index.html
+++ b/index.html
@@ -180,6 +180,13 @@
         </main>
     </div>
 
+    <footer id="footer" class="hidden text-center py-8 text-slate-400 text-xs font-medium border-t border-slate-100">
+        <div class="flex flex-col items-center gap-2">
+            <i class="fas fa-building-columns opacity-50 text-lg"></i>
+            <p>&copy; Created BPS Kota Singkawang - 2025</p>
+        </div>
+    </footer>
+
     <div id="modalDetail"
         class="hidden fixed inset-0 bg-slate-900/60 backdrop-blur-md z-[60] flex items-center justify-center p-0 sm:p-4 transition-all">
         <div class="bg-white w-full max-w-xl modal-full-mobile sm:rounded-[2.5rem] flex flex-col overflow-hidden">
