--- a/index.html
+++ b/index.html
@@ -171,11 +171,24 @@
             </div>
         </main>
 
-        <main id="pagePanduan" class="hidden p-6 max-w-4xl mx-auto">
-            <h2 class="text-2xl font-black mb-4">Panduan Penggunaan</h2>
-            <div class="bg-white p-6 rounded-[2rem] border border-slate-100 text-sm text-slate-600">
-                <p>Silakan lakukan geotagging pada objek yang ditentukan dengan mengklik tombol <b>Detail</b> pada
-                    daftar tugas.</p>
+        <main id="pagePanduan" class="hidden p-6 space-y-6 max-w-4xl mx-auto animate-fade-in pb-32">
+            <h2 class="text-2xl font-black text-slate-800 mb-4">Panduan Penggunaan</h2>
+            <div class="space-y-4">
+                <div class="bg-white p-6 rounded-[2rem] border border-slate-100">
+                    <h4 class="font-bold text-blue-600 mb-2">1. Pencarian Tugas</h4>
+                    <p class="text-sm text-slate-500">Buka menu <b>Tugas</b>, gunakan kolom pencarian atau filter
+                        wilayah untuk menemukan target usaha.</p>
+                </div>
+                <div class="bg-white p-6 rounded-[2rem] border border-slate-100">
+                    <h4 class="font-bold text-blue-600 mb-2">2. Geotagging</h4>
+                    <p class="text-sm text-slate-500">Klik tombol <b>DETAIL</b>, pastikan izin kamera dan GPS
+                        diaktifkan, lalu klik <b>SIMPAN GEOTAGGING</b> saat berada di lokasi.</p>
+                </div>
+                <div class="bg-white p-6 rounded-[2rem] border border-slate-100">
+                    <h4 class="font-bold text-blue-600 mb-2">3. Progres</h4>
+                    <p class="text-sm text-slate-500">Pantau progres kerja Anda melalui grafik di menu <b>Dashboard</b>.
+                    </p>
+                </div>
             </div>
         </main>
     </div>
