--- a/index.html
+++ b/index.html
@@ -97,6 +97,11 @@
     <div id="mainScrollArea" class="hidden">
 
         <main id="pageBeranda" class="p-6 space-y-6 max-w-4xl mx-auto animate-fade-in">
+            <div class="mb-2">
+                <p class="text-slate-500 text-sm font-medium">Hallo, Selamat Datang</p>
+                <h2 id="welcomeName" class="text-2xl font-black text-slate-800 tracking-tight leading-none">Petugas</h2>
+            </div>
+
             <div class="grid grid-cols-2 gap-4">
                 <div class="bg-white p-6 rounded-[2rem] shadow-sm border border-slate-100 transition-colors">
                     <div
@@ -115,6 +120,7 @@
                     <h3 id="statDone" class="text-4xl font-black text-slate-800 mt-1">0</h3>
                 </div>
             </div>
+
             <div class="card-gradient p-8 rounded-[2.5rem] text-white shadow-xl relative overflow-hidden">
                 <div class="relative z-10">
                     <p class="text-sm font-semibold opacity-80 uppercase tracking-[0.2em]">Total Progres Lapangan</p>
